# oxigraph-web

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  router.rs
src/api/: export.rs  graph.rs  health.rs  import.rs  mod.rs  sparql.rs  sparql_update.rs
src/db/: mod.rs  oxigraph.rs
src/schemas/: mod.rs  triples.rs
src/services/: export_service.rs  mod.rs  sparql_service.rs  triple_service.rs
static/: index.html
