[package]
name = "oxigraph-web"
version = "0.1.3"
edition = "2024"
author = ["Darix samani siewe <samanidarix@gmail.com>"]
description = "A high-performance, full-featured web API for Oxigraph."
readme = "README.md"
keywords = ["web", "oxigraph", "restapi", "restfulapi", "api"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/darixsamani/oxigraph-web"

categories = ["api-bindings", "database", "database-implementations", "web-programming", "web-programming::http-server"]

include = ["static/index.html"]

[dependencies]

serde_json = "1.0.149"
salvo = { version = "0.89.2", features = ["oapi", "affix-state", "anyhow", "jwt-auth", "test", "cors", "serve-static"] }
salvo-oapi = { version = "0.89.2", features = ["swagger-ui"] }
serde = { version = "1.0.228", features = ["derive"] }

tokio = { version="1.47.1", features= ["macros"]}
tracing = "0.1"
tracing-subscriber = "0.3" 
oxigraph = "0.5.5"
anyhow = "1.0.102"

[[bin]]
name = "oxigraph_web"
path = "src/main.rs"
